--- a/app/views/auth/login.html
+++ b/app/views/auth/login.html
@@ -11,6 +11,7 @@
 
     <link rel="stylesheet" href="http://localhost/CO3049_assignment/public/mazor/assets/compiled/css/app.css">
 
+    <script src="http://localhost/CO3049_assignment/public/assets/scripts/components.js"></script>
 
 </head>
 
@@ -65,22 +66,16 @@
     
 
 </body>
-
 <script>
-    
-    window.onload = function() {
-        loadHeader();
-    };
+    renderHeader().then(html => {
+        document.getElementById('header').insertAdjacentHTML("beforeend", html);
+    });
+
+</script>
+<script>
+
     document.getElementById("loginForm").addEventListener("input", validateForm);
 
-
-
-
-    async function loadHeader() {
-        const response = await fetch('http://localhost/CO3049_assignment/public/component/header');
-        const res= await response.text();
-        document.getElementById('header').innerHTML = res;
-    }
 
     async function validateForm() {
         try {
