--- a/app/views/main/media.html
+++ b/app/views/main/media.html
@@ -8,6 +8,7 @@
     <title>Post</title>
     <link rel="stylesheet" href="http://localhost/CO3049_assignment/public/assets/styles/global.css">
 
+    <script src="http://localhost/CO3049_assignment/public/assets/scripts/components.js"></script>
 
     <link rel="stylesheet" href="http://localhost/CO3049_assignment/public/mazor/assets/compiled/css/app.css">
 
@@ -72,25 +73,21 @@
     
 
 </body>
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script>
-    $('#header').load('http://localhost/CO3049_assignment/public/component/header');
+    document.getElementById('footer').insertAdjacentHTML("beforeend", renderFooter());
+    renderHeader().then(html => {
+        document.getElementById('header').insertAdjacentHTML("beforeend", html);
+    });
+
 </script>
 <script>
     const urlParams = new URLSearchParams(window.location.search);
     const mediaId = urlParams.get('media_id');
     window.onload = function() {
-        loadFooter();
 
         loadPage();
         loadCinema();
     };
-
-    async function loadFooter() {
-        const response = await fetch('http://localhost/CO3049_assignment/public/component/footer');
-        const res= await response.text();
-        document.getElementById('footer').innerHTML = res;
-    }
 
     async function loadPage() {
         
