--- a/app/views/main/home.html
+++ b/app/views/main/home.html
@@ -6,10 +6,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trang chủ</title>
-    <link rel="stylesheet" href="http://localhost/CO3049_assignment/public/assets/styles/global.css">
-
-
-    <link rel="stylesheet" href="http://localhost/CO3049_assignment/public/mazor/assets/compiled/css/app.css">
+    <link rel="stylesheet" href="../public/assets/styles/global.css">
+    <link rel="stylesheet" href="../public/mazor/assets/compiled/css/app.css">
+    <script src="../public/assets/scripts/components.js"></script>
 
 
     <!-- Swiper -->
@@ -36,7 +35,7 @@
                             <div class="swiper-wrapper">
                                 <!-- <div class="card-image" style="width: 100%; aspect-ratio: 21 / 7; overflow: hidden; position: relative; border-radius: 12px;">
                                     <img 
-                                        src="http://localhost/CO3049_assignment/public/main/displayMedia?id=${poster.id}" 
+                                        src="../public/main/displayMedia?id=${poster.id}" 
                                         alt="Poster"
                                         style="width: 100%; height: 100%; object-fit: fill;" 
                                     />
@@ -135,24 +134,13 @@
 </body>
 <script>
     window.onload = function() {
-        loadHeader();
-        loadFooter();
         loadPoster();
         loadMovie();
     };
-    async function loadHeader() {
-        const response = await fetch('http://localhost/CO3049_assignment/public/component/header');
-        const res= await response.text();
-        document.getElementById('header').innerHTML = res;
-    }
-    async function loadFooter() {
-        const response = await fetch('http://localhost/CO3049_assignment/public/component/footer');
-        const res= await response.text();
-        document.getElementById('footer').innerHTML = res;
-    }
+
     async function loadPoster() {
         try {
-            const response = await fetch('http://localhost/CO3049_assignment/public/main/getMedia?status=showing&type=poster');
+            const response = await fetch('../public/main/getMedia?status=showing&type=poster');
             const res = await response.json();
             console.log(res);
             if (res.status) {
@@ -166,7 +154,7 @@
                     slide.innerHTML = `
                         <div class="card-image" style="width: 100%; aspect-ratio: 21 / 7; overflow: hidden; position: relative; border-radius: 12px;">
                             <img 
-                                src="http://localhost/CO3049_assignment/public/main/displayMedia?id=${poster.id}" 
+                                src="../public/main/displayMedia?id=${poster.id}" 
                                 alt="Poster"
                                 style="width: 100%; height: 100%; object-fit: fill;" 
                             />
@@ -200,7 +188,7 @@
 
     async function loadMovie() {
         try {
-            const response = await fetch('http://localhost/CO3049_assignment/public/main/getMedia?status=showing&type=movie');
+            const response = await fetch('../public/main/getMedia?status=showing&type=movie');
             const res = await response.json();
             console.log(res);
             
@@ -228,7 +216,7 @@
                     const slide = document.createElement('div');
                     slide.classList.add('swiper-slide');
                     slide.onclick = function () {
-                        window.open(`http://localhost/CO3049_assignment/public/main/media?media_id=${movie.id}`, '_blank');
+                        window.open(`../public/main/media?media_id=${movie.id}`, '_blank');
                     };
 
                     slide.innerHTML = `
@@ -239,7 +227,7 @@
 
                             
                             <img 
-                                src="http://localhost/CO3049_assignment/public/main/displayMedia?id=${movie.id}" 
+                                src="../public/main/displayMedia?id=${movie.id}" 
                                 alt="Poster"
                                 style="width: 100%; height: 100%; object-fit: fill;" 
                             />
@@ -294,7 +282,7 @@
                     const slide = document.createElement('div');
                     slide.classList.add('swiper-slide');
                     slide.onclick = function () {
-                        window.open(`http://localhost/CO3049_assignment/public/main/media?media_id=${movie.id}`, '_blank');
+                        window.open(`../public/main/media?media_id=${movie.id}`, '_blank');
                     };
 
                     slide.innerHTML = `
@@ -305,7 +293,7 @@
 
                             
                             <img 
-                                src="http://localhost/CO3049_assignment/public/main/displayMedia?id=${movie.id}" 
+                                src="../public/main/displayMedia?id=${movie.id}" 
                                 alt="Poster"
                                 style="width: 100%; height: 100%; object-fit: fill;" 
                             />
@@ -360,7 +348,14 @@
     }
 
 </script>
-<script src="http://localhost/CO3049_assignment/public/mazor/assets/extensions/perfect-scrollbar/perfect-scrollbar.min.js"></script>
-<script src="http://localhost/CO3049_assignment/public/mazor/assets/compiled/js/app.js"></script>
+<script>
+    document.getElementById('footer').insertAdjacentHTML("beforeend", renderFooter());
+    renderHeader().then(html => {
+    document.getElementById('header').insertAdjacentHTML("beforeend", html);
+});
+
+</script>
+<script src="../public/mazor/assets/extensions/perfect-scrollbar/perfect-scrollbar.min.js"></script>
+<script src="../public/mazor/assets/compiled/js/app.js"></script>
 
 </html>
